--- a/umbrella_llc_task_react/package.json
+++ b/umbrella_llc_task_react/package.json
@@ -24,6 +24,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
