--- a/umbrella_llc_task_react/package.json
+++ b/umbrella_llc_task_react/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm install",
+    "start": " npm start",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.6.1",
     "axios": "^1.4.0",
     "cloudinary-react": "^1.8.1",
     "query-string": "^8.1.0",
